# fictional-system

./: .gitignore  CMakeLists.txt  helloworld.ilk  main.cpp  neuron_net.cpp  neuron_net.h  sigmoid.cpp  testnet.cpp  testnet.vcxproj  testnet.vcxproj.filters
Debug/: testnet.exe.recipe  testnet.ilk  testnet.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/testnet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testnet.lastbuildstate
net/: algen.h  create_w.h  gist.h  layer.cpp  layer.h  neuron.cpp  neuron.h  neuron_net.cpp  neuron_net.h  prefim.h  shab.h  sigmoid.h  testnet.cpp
release/: helloworld.ilk
release/src/: pics.h
src/: lbp.h  learning.h  net.h  pics.h  pics_set.h  struct.h
src/learning/: adaboost.h  countmask.h  create_w.h
src/net/: adaboost.h  algen.h  countmask.h  create_w.h  gist.h  layer.cpp  layer.h  neuron.cpp  neuron.h  neuron_net.cpp  neuron_net.h  prefim.h  shab.h  sigmoid.cpp  sigmoid.h  testnet.cpp
src/net/structure/: layer.h  neuron.cpp  neuron.h  neuron_net.h  prefim.h  sigmoid.h
src/net/templates/: algen.h  create_w.h
src/pics/: pics.h
src/pics/set/: lbp.h  pics.h
src/struct/: algen.h  prefim.cpp  prefim.h  shab.h  sigmoid.cpp  sigmoid.h
